--- a/src/index.css
+++ b/src/index.css
@@ -65,6 +65,10 @@ body {
   font-size: 10px;
 }
 
+.text-justified {
+  text-align: justify;
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
@@ -80,13 +84,16 @@ body {
   flex-direction: column;
 }
 
-.accordion {
-  box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
-  border-radius: 10px;
+.accordion-item {
+  background-color: rgba(0, 0, 0, 0.3);
 }
 
 .space {
   height: 100px;
+}
+
+.space-20 {
+  height: 20px;
 }
 
 Link {
@@ -615,10 +622,6 @@ input[type='file']::-webkit-file-upload-button:hover {
   position: absolute;
 }
 
-.fav-games-list {
-  height: 50px;
-}
-
 .fav-icon {
   width: max-content;
   height: max-content;
@@ -699,13 +702,26 @@ input[type='file']::-webkit-file-upload-button:hover {
 
 /*//* ARTICLES ---------------------------------- */
 
-.img-article,
 .img-edit {
   box-shadow: 0 0 9px 3px var(--gold);
 }
 
 .img-article {
   width: 100%;
+  border-radius: 20px;
+}
+
+.game-details {
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 20px;
+}
+
+.btn-game-descriprion {
+  background-color: transparent;
+}
+
+::after {
+  display: none;
 }
 
 /*//* FOOTER ------------------------------------ */
@@ -737,9 +753,14 @@ input[type='file']::-webkit-file-upload-button:hover {
   background-color: rgba(0, 0, 0, 0.7);
   color: white;
   border-radius: 25px;
+  max-height: 490px;
+}
+
+.user-review-box,
+.user-fav-box {
   overflow-y: auto;
   overflow-x: hidden;
-  max-height: 490px;
+  max-height: 410px;
 }
 
 /*//* LIVE CHAT ------------------------------- */
@@ -760,7 +781,7 @@ input[type='file']::-webkit-file-upload-button:hover {
 }
 
 .messages {
-  height: 80vh;
+  height: 60vh;
   width: 100%;
   overflow-y: auto;
   overflow-x: hidden;
@@ -769,16 +790,16 @@ input[type='file']::-webkit-file-upload-button:hover {
   scroll-behavior: smooth !important;
 }
 
-.other-user-message {
-  /* border: solid 1px rgba(255, 255, 255, 0.3); */
-  border-radius: 10px 10px 10px 0px;
-  background-color: rgba(255, 255, 255, 0.2);
-}
-
 .session-user-message {
   border-radius: 10px 10px 0px 10px;
-  background-color: rgba(255, 255, 255, 0.2);
+  background-color: rgba(255, 255, 255, 0.1);
   /* background-color: rgba(0, 0, 0, 0.6); */
+}
+
+.other-user-message {
+  /* border: solid 1px rgba(255, 255, 255, 0.3); */
+  border-radius: 0px 10px 10px 10px;
+  background-color: rgba(255, 255, 255, 0.2);
 }
 
 /*//* CHAT INPUT ---------------------------  */
