--- a/src/index.css
+++ b/src/index.css
@@ -797,6 +797,18 @@ input[type='file']::-webkit-file-upload-button:hover {
   max-height: 495px;
 }
 
+.profile-details {
+  animation: fadeInUp 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.8s both;
+}
+
+.profile-reviews {
+  animation: fadeInUp 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s both;
+}
+
+.profile-fav {
+  animation: fadeInUp 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.2s both;
+}
+
 /*//* LIVE CHAT ------------------------------- */
 
 .live-chat-anim {
