--- a/src/index.css
+++ b/src/index.css
@@ -327,7 +327,7 @@ Link {
   height: 1000px;
   margin-bottom: -235px;
   padding: 0px;
-  z-index: -2;
+  /* z-index: -2; */
 
   position: relative;
 
@@ -526,7 +526,7 @@ input[type='file'] + label {
 /*//* CARDS AND SOCIAL BUTTONS ------------------ */
 
 .btn-github {
-  width: 300px;
+  width: 250px;
   background-color: rgba(64, 120, 192, 0.8);
   animation: fadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.5s both;
 }
@@ -539,7 +539,7 @@ input[type='file'] + label {
 }
 
 .btn-discord {
-  width: 300px;
+  width: 250px;
   background-color: rgba(114, 137, 218, 0.8);
   animation: fadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.6s both;
 }
@@ -552,7 +552,7 @@ input[type='file'] + label {
 }
 
 .btn-google {
-  width: 300px;
+  width: 250px;
   background: rgba(66, 133, 244, 0.8);
   animation: fadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.7s both;
 }
@@ -615,6 +615,25 @@ input[type='file']::-webkit-file-upload-button:hover {
   margin: 0px !important;
 }
 
+.form-field {
+  background-color: transparent !important;
+  border: none;
+}
+
+.form-field:focus {
+  background-color: transparent !important;
+  outline: none;
+}
+
+.form-field:-webkit-autofill {
+  background-color: transparent !important;
+  outline: none;
+}
+
+.search-pagination {
+  animation: fadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.6s both;
+}
+
 /*//* FAVOURITES ------------------------------------ */
 .fav-container {
   position: absolute;
@@ -632,6 +651,31 @@ input[type='file']::-webkit-file-upload-button:hover {
 }
 
 /*//* FILTER ------------------------------------ */
+
+.genre-anim {
+  z-index: 999;
+  animation: fadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.9s both;
+}
+
+.platform-anim {
+  z-index: 999;
+  animation: fadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s both;
+}
+
+.developer-anim {
+  z-index: 999;
+  animation: fadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.1s both;
+}
+
+.publisher-anim {
+  z-index: 999;
+  animation: fadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.2s both;
+}
+
+.store-anim {
+  z-index: 999;
+  animation: fadeIn 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.3s both;
+}
 
 .dropdown-menu-dark {
   background-color: rgba(26, 26, 26, 0.9);
@@ -728,6 +772,10 @@ input[type='file']::-webkit-file-upload-button:hover {
   background-color: rgba(0, 0, 0, 0.3);
 }
 
+.custom-box-error {
+  border: 1px solid rgba(255, 0, 0, 0.519);
+}
+
 .custom-text {
   position: absolute;
   width: fit-content;
@@ -798,6 +846,10 @@ input[type='file']::-webkit-file-upload-button:hover {
 }
 
 .profile-details {
+  margin-top: 40px;
+}
+
+.profile-details-anim {
   animation: fadeInUp 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 0.8s both;
 }
 
@@ -807,6 +859,29 @@ input[type='file']::-webkit-file-upload-button:hover {
 
 .profile-fav {
   animation: fadeInUp 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.2s both;
+}
+
+.account-settings {
+  background-color: rgba(0, 0, 0, 0.6);
+  border-radius: 20px;
+  animation: fadeInUp 0.8s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1s both;
+}
+
+.account-info {
+  overflow-x: hidden;
+}
+
+.account-info-anim {
+  animation: slide-right-once 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.5s
+    both;
+}
+
+.avatar-settings {
+  overflow-x: hidden;
+}
+
+.avatar-anim {
+  animation: slide-left-once 0.7s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.5s both;
 }
 
 /*//* LIVE CHAT ------------------------------- */
@@ -900,15 +975,21 @@ input[type='file']::-webkit-file-upload-button:hover {
 .snip1390 {
   min-width: 230px;
   max-width: 315px;
-  width: 100%;
+  width: 90%;
   text-align: center;
   font-size: 16px;
-  background-color: rgba(0, 0, 0, 0.6);
+  background-color: rgba(0, 0, 0, 0.3);
   padding: 30px;
+  border: 1px solid rgb(168, 168, 168);
   border-radius: 10px;
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
+}
+
+.swiper-slide-shadow-right,
+.swiper-slide-shadow-left {
+  display: none !important;
 }
 
 .snip1390 figcaption {
@@ -917,9 +998,12 @@ input[type='file']::-webkit-file-upload-button:hover {
 }
 
 .blockquote {
-  height: 120px;
-  border: 2px solid black;
-  background-color: rgba(0, 0, 0, 0.4);
+  height: 100px;
+  position: relative;
+  width: auto;
+  padding: 13px;
+  background-color: transparent;
+
   overflow-y: auto;
   overflow-x: hidden;
 }
@@ -1129,6 +1213,10 @@ input[type='file']::-webkit-file-upload-button:hover {
 @media screen and (min-width: 992px) {
   .cardbutton {
     justify-self: end;
+  }
+
+  .avatar-settings {
+    border-right: 1px solid rgb(167, 167, 167);
   }
 }
 
@@ -1367,6 +1455,24 @@ input[type='file']::-webkit-file-upload-button:hover {
 
   100% {
     -webkit-transform: translateX(0px);
+    transform: translateX(0px);
+  }
+}
+
+@keyframes slide-left-once {
+  0% {
+    transform: translateX(320px);
+  }
+  100% {
+    transform: translateX(0px);
+  }
+}
+
+@keyframes slide-right-once {
+  0% {
+    transform: translateX(-680px);
+  }
+  100% {
     transform: translateX(0px);
   }
 }
